--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,105 +11,142 @@
   html={relativity.html}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{razavi2013development,
+  title={Development of a general method for designing microvascular networks using distribution of wall shear stress},
+  author={Razavi, Mohammad Sayed and Shirani, Ebrahim},
+  journal={Journal of biomechanics},
+  volume={46},
+  number={13},
+  pages={2303--2309},
+  year={2013},
+  publisher={Elsevier}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{razavi2014development,
+  title={Development of a general method for obtaining the geometry of microfluidic networks},
+  author={Razavi, Mohammad Sayed and Shirani, Ebrahim and Salimpour, MR},
+  journal={AIP Advances},
+  volume={4},
+  number={1},
+  pages={017109},
+  year={2014},
+  publisher={AIP Publishing}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{razavi2014constructal,
+  title={Constructal Law of Vascular Trees for Facilitation of Flow},
+  author={Razavi, Mohammad S and Shirani, Ebrahim and Salimpour, Mohammad Reza and Kassab, Ghassan S},
+  journal={PloS one},
+  volume={9},
+  number={12},
+  pages={e116260},
+  year={2014},
+  publisher={Public Library of Science}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{razavi2017relationship,
+  title={The relationship between lymphangion chain length and maximum pressure generation established through in vivo imaging and computational modeling},
+  author={Razavi, Mohammad and Nelson, Tyler Scott and Nepiyushchikh, Zhanna and Gleason, Rudolph L and Dixon, J Brandon},
+  journal={American Journal of Physiology-Heart and Circulatory Physiology},
+  pages={ajpheart--00003},
+  year={2017},
+  publisher={Am Physiological Soc}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
+@article{golozar2017theoretical,
+  title={Theoretical and computational investigation of optimal wall shear stress in bifurcations: a generalization of Murray’s law},
+  author={Golozar, Matin and Razavi, Mohammad S. and Shirani, Ebrahim},
+  journal={Scientia Iranica},
+  year={2017}
+}
+
+@article{s2018scaling,
+  title={Scaling laws of flow rate, vessel blood volume, lengths, and transit times with number of capillaries},
+  author={S Razavi, Mohammad and Shirani, Ebrahim and Kassab, Ghassan S},
+  journal={Frontiers in Physiology},
+  volume={9},
+  pages={581},
+  year={2018},
+  publisher={Frontiers}
+}
+
+@article{nelson2019lymphatic,
+  title={Lymphatic remodelling in response to lymphatic injury in the hind limbs of sheep},
+  author={Nelson, Tyler S and Nepiyushchikh, Zhanna and Hooks, Joshua ST and Razavi, Mohammad S and Lewis, Tristan and Clement, Cristina C and Thoresen, Merrilee and Cribb, Matthew T and Ross, Mindy K and Gleason, Rudolph L and others},
+  journal={Nature Biomedical Engineering},
+  pages={1--13},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+@article{razavi2020axial,
+  title={Axial stretch regulates rat tail collecting lymphatic vessel contractions},
+  author={Razavi, Mohammad S and Leonard-Duke, Julie and Hardie, Becky and Dixon, J Brandon and Gleason, Rudolph L},
+  journal={Scientific Reports},
+  volume={10},
+  number={1},
+  pages={1--11},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
+
+@article{razavi2020characterization,
+  title={Characterization of rat tail lymphatic contractility and biomechanics: incorporating nitric oxide-mediated vasoregulation},
+  author={Razavi, Mohammad S and Dixon, J Brandon and Gleason, Rudolph L},
+  journal={Journal of the Royal Society Interface},
   volume={17},
-  pages={549--560},
-  year={1905}
+  number={170},
+  pages={20200598},
+  year={2020},
+  publisher={The Royal Society}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{keahey2021spectral,
+  title={Spectral-and Polarization-Dependent Scattering of Gold Nanobipyramids for Exogenous Contrast in Optical Coherence Tomography},
+  author={Keahey, Pelham and Si, Peng and Razavi, Mohammad and Yu, Shangjie and Lippok, Norman and Villiger, Martin and Padera, Timothy P and de la Zerda, Adam and Bouma, Brett},
+  journal={Nano Letters},
+  year={2021},
+  publisher={ACS Publications}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{razavi2023regeneration,
+  title={Regeneration of collecting lymphatic vessels following injury},
+  author={Razavi, Mohammad S and Lei, Pin-Ji and Amoozgar, Zohreh and Leartprapun, Nichaluk and Nadkarni, Seemantini and Baish, James and Padera, Timothy and Munn, Lance},
+  year={2023}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{lei2023lymphatic,
+  title={Lymphatic muscle cells are unique cells that undergo aging induced changes},
+  author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O'Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Eethel R and Kumar, Ashwin S and Arroyo-Ataz, Guillermo and others},
+  journal={bioRxiv},
+  pages={2023--11},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{zhou2023cancer,
+  title={Cancer immunotherapy responses persist after lymph node resection},
+  author={Zhou, Hengbo and Baish, James W and O'Melia, Meghan J and Darragh, Laurel B and Specht, Emma and Czapla, Juliane and Lei, Pin-ji and Menzel, Lutz and Rajotte, Johanna J and Nikmaneshi, Mohammad R and others},
+  journal={bioRxiv},
+  pages={2023--09},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{razavi2024multiresolution,
+  title={A Multiresolution Approach with Method-Informed Statistical Analysis for Quantifying Lymphatic Pumping Dynamics},
+  author={Razavi, Mohammad S and Ruscic, Katarina Jennifer and Korn, Elizabeth G and Marquez, Marla and Houle, Timothy T and Singhal, Dhruv and Munn, Lance L and Padera, Timothy P},
+  journal={bioRxiv},
+  pages={2024--04},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{razavi2024mechanics,
+  title={Mechanics of Lymphatic Pumping and Lymphatic Function},
+  author={Razavi, Mohammad S and Munn, Lance L and Padera, Timothy P},
+  journal={Cold Spring Harbor Perspectives in Medicine},
+  pages={a041171},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory Press}
 }
