modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,152 +1,130 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
 @article{razavi2013development,
   title={Development of a general method for designing microvascular networks using distribution of wall shear stress},
   author={Razavi, Mohammad Sayed and Shirani, Ebrahim},
-  journal={Journal of biomechanics},
+  journal={Journal of Biomechanics},
   volume={46},
   number={13},
   pages={2303--2309},
   year={2013},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.jbiomech.2013.06.034},
+  url={https://doi.org/10.1016/j.jbiomech.2013.06.034},
+  note={Google Scholar ID: qw6NjREAAAAJ:9yKSN-GCB0IC}
 }
 
 @article{razavi2014development,
   title={Development of a general method for obtaining the geometry of microfluidic networks},
-  author={Razavi, Mohammad Sayed and Shirani, Ebrahim and Salimpour, MR},
+  author={Razavi, Mohammad Sayed and Shirani, Ebrahim and Salimpour, M.R.},
   journal={AIP Advances},
   volume={4},
   number={1},
   pages={017109},
   year={2014},
-  publisher={AIP Publishing}
+  publisher={AIP Publishing},
+  doi={10.1063/1.4862735},
+  url={https://doi.org/10.1063/1.4862735},
+  note={Google Scholar ID: qw6NjREAAAAJ:2osOgNQ5qMEC}
 }
 
 @article{razavi2014constructal,
   title={Constructal Law of Vascular Trees for Facilitation of Flow},
-  author={Razavi, Mohammad S and Shirani, Ebrahim and Salimpour, Mohammad Reza and Kassab, Ghassan S},
-  journal={PloS one},
+  author={Razavi, Mohammad S. and Shirani, Ebrahim and Salimpour, Mohammad Reza and Kassab, Ghassan S.},
+  journal={PLOS ONE},
   volume={9},
   number={12},
   pages={e116260},
   year={2014},
-  publisher={Public Library of Science}
+  publisher={Public Library of Science},
+  doi={10.1371/journal.pone.0116260},
+  url={https://doi.org/10.1371/journal.pone.0116260},
+  note={Google Scholar ID: qw6NjREAAAAJ:UeHWp8X0CEIC}
 }
 
 @article{razavi2017relationship,
   title={The relationship between lymphangion chain length and maximum pressure generation established through in vivo imaging and computational modeling},
-  author={Razavi, Mohammad and Nelson, Tyler Scott and Nepiyushchikh, Zhanna and Gleason, Rudolph L and Dixon, J Brandon},
+  author={Razavi, Mohammad and Nelson, Tyler Scott and Nepiyushchikh, Zhanna and Gleason, Rudolph L. and Dixon, J. Brandon},
   journal={American Journal of Physiology-Heart and Circulatory Physiology},
-  pages={ajpheart--00003},
+  volume={312},
+  number={6},
+  pages={H1187--H1194},
   year={2017},
-  publisher={Am Physiological Soc}
+  publisher={American Physiological Society},
+  doi={10.1152/ajpheart.00003.2017},
+  url={https://doi.org/10.1152/ajpheart.00003.2017},
+  note={Google Scholar ID: qw6NjREAAAAJ:IjCSPb-OGe4C}
 }
 
 @article{golozar2017theoretical,
   title={Theoretical and computational investigation of optimal wall shear stress in bifurcations: a generalization of Murray’s law},
   author={Golozar, Matin and Razavi, Mohammad S. and Shirani, Ebrahim},
   journal={Scientia Iranica},
-  year={2017}
+  volume={24},
+  number={6},
+  pages={3020--3029},
+  year={2017},
+  doi={10.24200/sci.2017.4321},
+  url={https://doi.org/10.24200/sci.2017.4321},
+  note={Google Scholar ID: qw6NjREAAAAJ:ufrVoPGSRksC}
 }
 
-@article{s2018scaling,
+@article{razavi2018scaling,
   title={Scaling laws of flow rate, vessel blood volume, lengths, and transit times with number of capillaries},
-  author={S Razavi, Mohammad and Shirani, Ebrahim and Kassab, Ghassan S},
+  author={Razavi, Mohammad S. and Shirani, Ebrahim and Kassab, Ghassan S.},
   journal={Frontiers in Physiology},
   volume={9},
   pages={581},
   year={2018},
-  publisher={Frontiers}
+  publisher={Frontiers},
+  doi={10.3389/fphys.2018.00581},
+  url={https://doi.org/10.3389/fphys.2018.00581},
+  note={Google Scholar ID: qw6NjREAAAAJ:4TOpqqG69KYC}
 }
 
 @article{nelson2019lymphatic,
-  title={Lymphatic remodelling in response to lymphatic injury in the hind limbs of sheep},
-  author={Nelson, Tyler S and Nepiyushchikh, Zhanna and Hooks, Joshua ST and Razavi, Mohammad S and Lewis, Tristan and Clement, Cristina C and Thoresen, Merrilee and Cribb, Matthew T and Ross, Mindy K and Gleason, Rudolph L and others},
+  title={Lymphatic remodeling in response to lymphatic injury in the hind limbs of sheep},
+  author={Nelson, Tyler S. and Nepiyushchikh, Zhanna and Hooks, Joshua S.T. and Razavi, Mohammad S. and Lewis, Tristan and Clement, Cristina C. and Thoresen, Merrilee and Cribb, Matthew T. and Ross, Mindy K. and Gleason, Rudolph L. and Dixon, J. Brandon},
   journal={Nature Biomedical Engineering},
-  pages={1--13},
+  volume={3},
+  pages={187--199},
   year={2019},
-  publisher={Nature Publishing Group}
+  publisher={Nature Publishing Group},
+  doi={10.1038/s41551-018-0338-1},
+  url={https://doi.org/10.1038/s41551-018-0338-1},
+  note={Google Scholar ID: qw6NjREAAAAJ:W7OEmFMy1HYC}
 }
 
 @article{razavi2020axial,
   title={Axial stretch regulates rat tail collecting lymphatic vessel contractions},
-  author={Razavi, Mohammad S and Leonard-Duke, Julie and Hardie, Becky and Dixon, J Brandon and Gleason, Rudolph L},
+  author={Razavi, Mohammad S. and Leonard-Duke, Julie and Hardie, Becky and Dixon, J. Brandon and Gleason, Rudolph L.},
   journal={Scientific Reports},
   volume={10},
   number={1},
   pages={1--11},
   year={2020},
-  publisher={Nature Publishing Group}
+  publisher={Nature Publishing Group},
+  doi={10.1038/s41598-020-59225-0},
+  url={https://doi.org/10.1038/s41598-020-59225-0},
+  note={Google Scholar ID: qw6NjREAAAAJ:YOwf2qJgpHMC}
 }
 
 @article{razavi2020characterization,
   title={Characterization of rat tail lymphatic contractility and biomechanics: incorporating nitric oxide-mediated vasoregulation},
-  author={Razavi, Mohammad S and Dixon, J Brandon and Gleason, Rudolph L},
+  author={Razavi, Mohammad S. and Dixon, J. Brandon and Gleason, Rudolph L.},
   journal={Journal of the Royal Society Interface},
   volume={17},
   number={170},
   pages={20200598},
   year={2020},
-  publisher={The Royal Society}
+  publisher={The Royal Society},
+  doi={10.1098/rsif.2020.0598},
+  url={https://doi.org/10.1098/rsif.2020.0598},
+  note={Google Scholar ID: qw6NjREAAAAJ:UebtZRa9Y70C}
 }
 
 @article{keahey2021spectral,
-  title={Spectral-and Polarization-Dependent Scattering of Gold Nanobipyramids for Exogenous Contrast in Optical Coherence Tomography},
-  author={Keahey, Pelham and Si, Peng and Razavi, Mohammad and Yu, Shangjie and Lippok, Norman and Villiger, Martin and Padera, Timothy P and de la Zerda, Adam and Bouma, Brett},
-  journal={Nano Letters},
-  year={2021},
-  publisher={ACS Publications}
-}
-
-@article{razavi2023regeneration,
-  title={Regeneration of collecting lymphatic vessels following injury},
-  author={Razavi, Mohammad S and Lei, Pin-Ji and Amoozgar, Zohreh and Leartprapun, Nichaluk and Nadkarni, Seemantini and Baish, James and Padera, Timothy and Munn, Lance},
-  year={2023}
-}
-
-@article{lei2023lymphatic,
-  title={Lymphatic muscle cells are unique cells that undergo aging induced changes},
-  author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O'Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Eethel R and Kumar, Ashwin S and Arroyo-Ataz, Guillermo and others},
-  journal={bioRxiv},
-  pages={2023--11},
-  year={2023},
-  publisher={Cold Spring Harbor Laboratory}
-}
-
-@article{zhou2023cancer,
-  title={Cancer immunotherapy responses persist after lymph node resection},
-  author={Zhou, Hengbo and Baish, James W and O'Melia, Meghan J and Darragh, Laurel B and Specht, Emma and Czapla, Juliane and Lei, Pin-ji and Menzel, Lutz and Rajotte, Johanna J and Nikmaneshi, Mohammad R and others},
-  journal={bioRxiv},
-  pages={2023--09},
-  year={2023},
-  publisher={Cold Spring Harbor Laboratory}
-}
-
-@article{razavi2024multiresolution,
-  title={A Multiresolution Approach with Method-Informed Statistical Analysis for Quantifying Lymphatic Pumping Dynamics},
-  author={Razavi, Mohammad S and Ruscic, Katarina Jennifer and Korn, Elizabeth G and Marquez, Marla and Houle, Timothy T and Singhal, Dhruv and Munn, Lance L and Padera, Timothy P},
-  journal={bioRxiv},
-  pages={2024--04},
-  year={2024},
-  publisher={Cold Spring Harbor Laboratory}
-}
-
-@article{razavi2024mechanics,
-  title={Mechanics of Lymphatic Pumping and Lymphatic Function},
-  author={Razavi, Mohammad S and Munn, Lance L and Padera, Timothy P},
-  journal={Cold Spring Harbor Perspectives in Medicine},
-  pages={a041171},
-  year={2024},
-  publisher={Cold Spring Harbor Laboratory Press}
-}
+  title={Spectral-and polarization-dependent scattering of gold nanobipyramids for exogenous contrast in optical coherence tomography},
+  author={
+::contentReference[oaicite:0]{index=0}
+ 
