--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,130 +1,42 @@
 ---
 ---
-@article{razavi2013development,
-  title={Development of a general method for designing microvascular networks using distribution of wall shear stress},
-  author={Razavi, Mohammad Sayed and Shirani, Ebrahim},
-  journal={Journal of Biomechanics},
-  volume={46},
-  number={13},
-  pages={2303--2309},
-  year={2013},
-  publisher={Elsevier},
-  doi={10.1016/j.jbiomech.2013.06.034},
-  url={https://doi.org/10.1016/j.jbiomech.2013.06.034},
-  note={Google Scholar ID: qw6NjREAAAAJ:9yKSN-GCB0IC}
+
+@article{lei2024aging,
+  title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
+  author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and Razavi, Mohammad S and others},
+  journal={Developmental Cell},
+  year={2024},
+  google_scholar_id={qw6NjREAAAAJ},
+  dimensions={true},
+  publisher={Elsevier}
+  annotation={* Example use of superscripts<br>† Albert Einstein},
+  selected={true},
 }
 
-@article{razavi2014development,
-  title={Development of a general method for obtaining the geometry of microfluidic networks},
-  author={Razavi, Mohammad Sayed and Shirani, Ebrahim and Salimpour, M.R.},
-  journal={AIP Advances},
-  volume={4},
-  number={1},
-  pages={017109},
-  year={2014},
-  publisher={AIP Publishing},
-  doi={10.1063/1.4862735},
-  url={https://doi.org/10.1063/1.4862735},
-  note={Google Scholar ID: qw6NjREAAAAJ:2osOgNQ5qMEC}
-}
-
-@article{razavi2014constructal,
-  title={Constructal Law of Vascular Trees for Facilitation of Flow},
-  author={Razavi, Mohammad S. and Shirani, Ebrahim and Salimpour, Mohammad Reza and Kassab, Ghassan S.},
-  journal={PLOS ONE},
-  volume={9},
-  number={12},
-  pages={e116260},
-  year={2014},
-  publisher={Public Library of Science},
-  doi={10.1371/journal.pone.0116260},
-  url={https://doi.org/10.1371/journal.pone.0116260},
-  note={Google Scholar ID: qw6NjREAAAAJ:UeHWp8X0CEIC}
-}
-
-@article{razavi2017relationship,
-  title={The relationship between lymphangion chain length and maximum pressure generation established through in vivo imaging and computational modeling},
-  author={Razavi, Mohammad and Nelson, Tyler Scott and Nepiyushchikh, Zhanna and Gleason, Rudolph L. and Dixon, J. Brandon},
-  journal={American Journal of Physiology-Heart and Circulatory Physiology},
-  volume={312},
-  number={6},
-  pages={H1187--H1194},
-  year={2017},
-  publisher={American Physiological Society},
-  doi={10.1152/ajpheart.00003.2017},
-  url={https://doi.org/10.1152/ajpheart.00003.2017},
-  note={Google Scholar ID: qw6NjREAAAAJ:IjCSPb-OGe4C}
-}
-
-@article{golozar2017theoretical,
-  title={Theoretical and computational investigation of optimal wall shear stress in bifurcations: a generalization of Murray’s law},
-  author={Golozar, Matin and Razavi, Mohammad S. and Shirani, Ebrahim},
-  journal={Scientia Iranica},
-  volume={24},
-  number={6},
-  pages={3020--3029},
-  year={2017},
-  doi={10.24200/sci.2017.4321},
-  url={https://doi.org/10.24200/sci.2017.4321},
-  note={Google Scholar ID: qw6NjREAAAAJ:ufrVoPGSRksC}
-}
-
-@article{razavi2018scaling,
-  title={Scaling laws of flow rate, vessel blood volume, lengths, and transit times with number of capillaries},
-  author={Razavi, Mohammad S. and Shirani, Ebrahim and Kassab, Ghassan S.},
-  journal={Frontiers in Physiology},
-  volume={9},
-  pages={581},
-  year={2018},
-  publisher={Frontiers},
-  doi={10.3389/fphys.2018.00581},
-  url={https://doi.org/10.3389/fphys.2018.00581},
-  note={Google Scholar ID: qw6NjREAAAAJ:4TOpqqG69KYC}
-}
-
-@article{nelson2019lymphatic,
-  title={Lymphatic remodeling in response to lymphatic injury in the hind limbs of sheep},
-  author={Nelson, Tyler S. and Nepiyushchikh, Zhanna and Hooks, Joshua S.T. and Razavi, Mohammad S. and Lewis, Tristan and Clement, Cristina C. and Thoresen, Merrilee and Cribb, Matthew T. and Ross, Mindy K. and Gleason, Rudolph L. and Dixon, J. Brandon},
-  journal={Nature Biomedical Engineering},
-  volume={3},
-  pages={187--199},
-  year={2019},
-  publisher={Nature Publishing Group},
-  doi={10.1038/s41551-018-0338-1},
-  url={https://doi.org/10.1038/s41551-018-0338-1},
-  note={Google Scholar ID: qw6NjREAAAAJ:W7OEmFMy1HYC}
-}
-
-@article{razavi2020axial,
-  title={Axial stretch regulates rat tail collecting lymphatic vessel contractions},
-  author={Razavi, Mohammad S. and Leonard-Duke, Julie and Hardie, Becky and Dixon, J. Brandon and Gleason, Rudolph L.},
-  journal={Scientific Reports},
-  volume={10},
-  number={1},
-  pages={1--11},
-  year={2020},
-  publisher={Nature Publishing Group},
-  doi={10.1038/s41598-020-59225-0},
-  url={https://doi.org/10.1038/s41598-020-59225-0},
-  note={Google Scholar ID: qw6NjREAAAAJ:YOwf2qJgpHMC}
-}
-
-@article{razavi2020characterization,
-  title={Characterization of rat tail lymphatic contractility and biomechanics: incorporating nitric oxide-mediated vasoregulation},
-  author={Razavi, Mohammad S. and Dixon, J. Brandon and Gleason, Rudolph L.},
-  journal={Journal of the Royal Society Interface},
-  volume={17},
-  number={170},
-  pages={20200598},
-  year={2020},
-  publisher={The Royal Society},
-  doi={10.1098/rsif.2020.0598},
-  url={https://doi.org/10.1098/rsif.2020.0598},
-  note={Google Scholar ID: qw6NjREAAAAJ:UebtZRa9Y70C}
-}
-
-@article{keahey2021spectral,
-  title={Spectral-and polarization-dependent scattering of gold nanobipyramids for exogenous contrast in optical coherence tomography},
-  author={
-::contentReference[oaicite:0]{index=0}
- 
+@article{PhysRev.47.777,
+  abbr={PhysRev},
+  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
+  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+  journal={Phys. Rev.},
+  location={New Jersey},
+  volume={47},
+  issue={10},
+  pages={777--780},
+  numpages={0},
+  year={1935},
+  month={May},
+  publisher=aps,
+  doi={10.1103/PhysRev.47.777},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
+  altmetric={248277},
+  dimensions={true},
+  google_scholar_id={qyhmnyLat1gC},
+  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
+  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
+  annotation={* Example use of superscripts<br>† Albert Einstein},
+  selected={true},
+  inspirehep_id = {3255}
+} 
