modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,21 @@
 ---
 ---
 
-
+@article{lei2024aging,
+  abbr={Dev Cell},
+  title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
+  author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and Razavi, Mohammad S and others},
+  journal={Developmental Cell},
+  year={2024},
+  google_scholar_id={qw6NjREAAAAJ},
+  dimensions={true},
+  publisher=Elsevier
+  annotation={* Example use of superscripts<br>† Albert Einstein},
+  selected={true},
+  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
+  selected={true},
+  doi={10.1016/j.devcel.2024.12.010}
+}
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
