--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,11 +9,11 @@
   year={2024},
   google_scholar_id={qw6NjREAAAAJ},
   dimensions={true},
-  publisher=Elsevier
+  publisher={Elsevier}
   annotation={* Example use of superscripts<br>† Albert Einstein},
   selected={true},
   additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  selected={true},
+    selected={true},
   doi={10.1016/j.devcel.2024.12.010}
 }
 
