modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,20 +1,22 @@
 ---
 ---
-
 @article{lei2024aging,
-  abbr={Dev Cell},
   title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
-  author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and, Razavi Mohammad S and others},
+  author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and Razavi, Mohammad S and others},
   journal={Developmental Cell},
   year={2024},
-  google_scholar_id={qw6NjREAAAAJ},
-  dimensions={true},
   publisher={Elsevier}
-  annotation={* Example use of superscripts<br>† Razavi Mohammad},
-  selected={true},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-    selected={true},
-  doi={10.1016/j.devcel.2024.12.010}
+}
+@article{Lei2024,
+  title = {Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
+  ISSN = {1534-5807},
+  url = {http://dx.doi.org/10.1016/j.devcel.2024.12.010},
+  DOI = {10.1016/j.devcel.2024.12.010},
+  journal = {Developmental Cell},
+  publisher = {Elsevier BV},
+  author = {Lei,  Pin-Ji and Ruscic,  Katarina J. and Roh,  Kangsan and Rajotte,  Johanna J. and O’Melia,  Meghan J. and Bouta,  Echoe M. and Marquez,  Marla and Pereira,  Ethel R. and Kumar,  Ashwin S. and Razavi,  Mohammad S. and Zhou,  Hengbo and Menzel,  Lutz and Huang,  Liqing and Kumra,  Heena and Duquette,  Mark and Huang,  Peigen and Baish,  James W. and Munn,  Lance L. and Kurpios,  Natasza A. and Ubellacker,  Jessalyn M. and Padera,  Timothy P.},
+  year = {2024},
+  month = dec 
 }
 
 @article{PhysRev.47.777,
@@ -44,3 +46,4 @@
   selected={true},
   inspirehep_id = {3255}
 } 
+
