--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,49 +1,11 @@
 ---
 ---
 @article{lei2024aging,
+  abbr={Developmental Cell},
   title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
   author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and Razavi, Mohammad S and others},
   journal={Developmental Cell},
   year={2024},
   publisher={Elsevier}
 }
-@article{Lei2024,
-  title = {Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
-  ISSN = {1534-5807},
-  url = {http://dx.doi.org/10.1016/j.devcel.2024.12.010},
-  DOI = {10.1016/j.devcel.2024.12.010},
-  journal = {Developmental Cell},
-  publisher = {Elsevier BV},
-  author = {Lei,  Pin-Ji and Ruscic,  Katarina J. and Roh,  Kangsan and Rajotte,  Johanna J. and O’Melia,  Meghan J. and Bouta,  Echoe M. and Marquez,  Marla and Pereira,  Ethel R. and Kumar,  Ashwin S. and Razavi,  Mohammad S. and Zhou,  Hengbo and Menzel,  Lutz and Huang,  Liqing and Kumra,  Heena and Duquette,  Mark and Huang,  Peigen and Baish,  James W. and Munn,  Lance L. and Kurpios,  Natasza A. and Ubellacker,  Jessalyn M. and Padera,  Timothy P.},
-  year = {2024},
-  month = dec 
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-} 
 
