modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 @article{lei2024aging,
-  abbr={Developmental Cell},
+  abbr={J. R. Soc. Interface},
   title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
   author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and Razavi, Mohammad S and others},
   journal={Developmental Cell},
@@ -9,3 +9,14 @@
   publisher={Elsevier}
 }
 
+@article{razavi2020characterization,
+  abbr={Developmental Cell},
+  title={Characterization of rat tail lymphatic contractility and biomechanics: incorporating nitric oxide-mediated vasoregulation},
+  author={Razavi, Mohammad S and Dixon, J Brandon and Gleason, Rudolph L},
+  journal={Journal of the Royal Society Interface},
+  volume={17},
+  number={170},
+  pages={20200598},
+  year={2020},
+  publisher={The Royal Society}
+}
