modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 @article{lei2024aging,
-  abbr={J. R. Soc. Interface},
+  abbr={Dev Cell},
   title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
   author={Lei, Pin-Ji and Ruscic, Katarina J and Roh, Kangsan and Rajotte, Johanna J and O’Melia, Meghan J and Bouta, Echoe M and Marquez, Marla and Pereira, Ethel R and Kumar, Ashwin S and Razavi, Mohammad S and others},
   journal={Developmental Cell},
@@ -10,7 +10,8 @@
 }
 
 @article{razavi2020characterization,
-  abbr={Developmental Cell},
+  abbr={J. R. Soc. Interface},
+  bibtex_show={true},
   title={Characterization of rat tail lymphatic contractility and biomechanics: incorporating nitric oxide-mediated vasoregulation},
   author={Razavi, Mohammad S and Dixon, J Brandon and Gleason, Rudolph L},
   journal={Journal of the Royal Society Interface},
