--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
 @article{razavi2020characterization,
   abbr={J. R. Soc. Interface},
   bibtex_show={true},
+  doi={10.1098/rsif.2020.0598},
   title={Characterization of rat tail lymphatic contractility and biomechanics: incorporating nitric oxide-mediated vasoregulation},
   author={Razavi, Mohammad S and Dixon, J Brandon and Gleason, Rudolph L},
   journal={Journal of the Royal Society Interface},
