modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,25 @@
 ---
 ---
+@article{Razavi2025-pl,
+  abbr={npj Imaging},
+  bibtex_show={true},
+  doi={10.1038/s44303-024-00061-z},
+  title     = "A multiresolution approach with method-informed statistical
+               analysis for quantifying lymphatic pumping dynamics",
+  author    = "Razavi, Mohammad S and Ruscic, Katarina J and Korn, Elizabeth G
+               and Marquez, Marla and Houle, Timothy T and Singhal, Dhruv and
+               Munn, Lance L and Padera, Timothy P",
+  journal   = "npj Imaging",
+  publisher = "Springer Science and Business Media LLC",
+  volume    =  3,
+  number    =  1,
+  month     =  jan,
+  year      =  2025,
+  copyright = "https://creativecommons.org/licenses/by-nc-nd/4.0",
+  language  = "en"
+}
+
+
 @article{lei2024aging,
   abbr={Dev Cell},
   title={Aging-induced changes in lymphatic muscle cell transcriptomes are associated with reduced pumping of peripheral collecting lymphatic vessels in mice},
@@ -8,6 +28,8 @@
   year={2024},
   publisher={Elsevier}
 }
+
+
 
 @article{razavi2020characterization,
   abbr={J. R. Soc. Interface},
