modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,21 +1,22 @@
 ---
 ---
+@string{npj = {npj Imahing,}}
 @article{Razavi2025-pl,
   abbr={npj Imaging},
   bibtex_show={true},
   doi={10.1038/s44303-024-00061-z},
-  title     = "A multiresolution approach with method-informed statistical
-               analysis for quantifying lymphatic pumping dynamics",
-  author    = "Razavi, Mohammad S and Ruscic, Katarina J and Korn, Elizabeth G
+  title     = {A multiresolution approach with method-informed statistical
+               analysis for quantifying lymphatic pumping dynamics},
+  author    = {Razavi, Mohammad S and Ruscic, Katarina J and Korn, Elizabeth G
                and Marquez, Marla and Houle, Timothy T and Singhal, Dhruv and
-               Munn, Lance L and Padera, Timothy P",
-  journal   = "npj Imaging",
-  publisher = "Springer Science and Business Media LLC",
-  volume    =  3,
-  number    =  1,
-  month     =  jan,
-  year      =  2025,
-  copyright = "https://creativecommons.org/licenses/by-nc-nd/4.0",
+               Munn, Lance L and Padera, Timothy P},
+  journal   = {npj Imaging},
+  publisher = {Springer Science and Business Media LLC},
+  volume    =  {3},
+  number    =  {1},
+  month     =  {jan},
+  year      =  {2025},
+  selected = {true}
   language  = "en"
 }
 
