modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 ---
 ---
-@string{npj = {npj Imahing,}}
+
 @article{Razavi2025-pl,
   abbr={npj Imaging},
   bibtex_show={true},
@@ -11,7 +11,7 @@
                and Marquez, Marla and Houle, Timothy T and Singhal, Dhruv and
                Munn, Lance L and Padera, Timothy P},
   journal   = {npj Imaging},
-  publisher = {Springer Science and Business Media LLC},
+  publisher={Nature Publishing Group UK London},
   volume    =  {3},
   number    =  {1},
   month     =  {jan},
