modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
   number    =  {1},
   month     =  {jan},
   year      =  {2025},
-  selected = {true}
+  selected={true},
   language  = "en"
 }
 
