modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,3 +45,24 @@
   year={2020},
   publisher={The Royal Society}
 }
+
+@article{razavi2024mechanics,
+  title={Mechanics of Lymphatic Pumping and Lymphatic Function},
+  author={Razavi, Mohammad S and Munn, Lance L and Padera, Timothy P},
+  journal={Cold Spring Harbor Perspectives in Medicine},
+  pages={a041171},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+
+@article{keahey2021spectral,
+  title={Spectral-and polarization-dependent scattering of gold nanobipyramids for exogenous contrast in optical coherence tomography},
+  author={Keahey, Pelham and Si, Peng and Razavi, Mohammad and Yu, Shangjie and Lippok, Norman and Villiger, Martin and Padera, Timothy P and de la Zerda, Adam and Bouma, Brett},
+  journal={Nano Letters},
+  volume={21},
+  number={20},
+  pages={8595--8601},
+  year={2021},
+  publisher={ACS Publications}
+}
