modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -57,6 +57,8 @@
 
 
 @article{keahey2021spectral,
+  abbr={Nano Letters},
+  bibtex_show={true},
   title={Spectral-and polarization-dependent scattering of gold nanobipyramids for exogenous contrast in optical coherence tomography},
   author={Keahey, Pelham and Si, Peng and Razavi, Mohammad and Yu, Shangjie and Lippok, Norman and Villiger, Martin and Padera, Timothy P and de la Zerda, Adam and Bouma, Brett},
   journal={Nano Letters},
@@ -65,4 +67,17 @@
   pages={8595--8601},
   year={2021},
   publisher={ACS Publications}
+}
+
+@article{razavi2017relationship,
+  abbr={AJP-Heart},
+  bibtex_show={true},
+  title={The relationship between lymphangion chain length and maximum pressure generation established through in vivo imaging and computational modeling},
+  author={Razavi, Mohammad S and Nelson, Tyler S and Nepiyushchikh, Zhanna and Gleason, Rudolph L and Dixon, J Brandon},
+  journal={American Journal of Physiology-Heart and Circulatory Physiology},
+  volume={313},
+  number={6},
+  pages={H1249--H1260},
+  year={2017},
+  publisher={American Physiological Society Bethesda, MD}
 }
