modified:   _bibliography/papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -69,15 +69,19 @@
   publisher={ACS Publications}
 }
 
-@article{razavi2017relationship,
-  abbr={AJP-Heart},
-  bibtex_show={true},
-  title={The relationship between lymphangion chain length and maximum pressure generation established through in vivo imaging and computational modeling},
-  author={Razavi, Mohammad S and Nelson, Tyler S and Nepiyushchikh, Zhanna and Gleason, Rudolph L and Dixon, J Brandon},
-  journal={American Journal of Physiology-Heart and Circulatory Physiology},
-  volume={313},
-  number={6},
-  pages={H1249--H1260},
-  year={2017},
-  publisher={American Physiological Society Bethesda, MD}
+
+@article{10.3389/fphys.2018.00581, 
+abbr={Front. physiol.},
+bibtex_show={true},
+year = {2018}, 
+title = {{Scaling Laws of Flow Rate, Vessel Blood Volume, Lengths, and Transit Times With Number of Capillaries}}, 
+author = {Razavi, Mohammad S. and Shirani, Ebrahim and Kassab, Ghassan S.}, 
+journal = {Frontiers in Physiology}, 
+issn = {1664-042X}, 
+doi = {10.3389/fphys.2018.00581}, 
+pmid = {29875687}, 
+pmcid = {PMC5974547}, 
+abstract = {{The structure-function relation is one of the oldest hypotheses in biology and medicine; i.e., form serves function and function influences form. Here, we derive and validate form-function relations for volume, length, flow, and mean transit time in vascular trees and capillary numbers of various organs and species. We define a vessel segment as a “stem” and the vascular tree supplied by the stem as a “crown.” We demonstrate form-function relations between the number of capillaries in a vascular network and the crown volume, crown length, and blood flow that perfuses the network. The scaling laws predict an exponential relationship between crown volume and the number of capillaries with the power, λ, of 4/3 < λ < 3/2. It is also shown that blood flow rate and vessel lengths are proportional to the number of capillaries in the entire stem-crown systems. The integration of the scaling laws then results in a relation between transit time and crown length and volume. The scaling laws are both intra-specific (i.e., within vasculatures of various organs, including heart, lung, mesentery, skeletal muscle and eye) and inter-specific (i.e., across various species, including rats, cats, rabbits, pigs, hamsters, and humans). This study is fundamental to understanding the physiological structure and function of vascular trees to transport blood, with significant implications for organ health and disease.}}, 
+pages = {581}, 
+volume = {9}
 }
